bug - workwith helptext visibility improved

--- a/src/app/produkt/[id]/ProductCardWorksWith.module.scss
+++ b/src/app/produkt/[id]/ProductCardWorksWith.module.scss
@@ -42,7 +42,7 @@
 
 .copyButton {
   position: relative;
-  z-index: 2;
+  z-index: 0;
   border: 1px dashed #0056b4;
 }
 
